--- a/LessonHomeWork1/styles.css
+++ b/LessonHomeWork1/styles.css
@@ -1,23 +1,38 @@
-*{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: larger;
-    color: black;
-    
-    
+* {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
+  color: black;
 }
-body{
-    background-color:grey;
+body {
+  background-color: grey;
 }
-h1:hover{
-    font-family: 'Lumanosimo', cursive;
-    background-color: red;
+h1:hover {
+  font-family: "Lumanosimo", cursive;
+  background-color: brown;
 }
-ul{
-    background-color: aqua;
-    font-weight: lighter;
+ul {
+  background-color: aqua;
+  font-weight: lighter;
 }
-p{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-footer{
-    font-weight: bolder}
+footer {
+  font-weight: bolder;
+}
+.note {
+  background-color: brown;
+  padding: 0;
+  margin: 0;
+}
+.note1 {
+  background-color: brown;
+  padding: 0;
+  margin: 0;
+}
+h1::after {
+  content: " 💪 ";
+}
+h1::before {
+  content: "🏋";
+}
