--- a/HomeWork2/styles.css
+++ b/HomeWork2/styles.css
@@ -8,6 +8,9 @@
   background: linear-gradient(45deg, rgb(74, 193, 74), rgb(228, 201, 201));
   text-align: center;
 }
+.N1 {
+  margin-left: 15px;
+}
 html {
   background: url(https://img.tsn.ua/cached/292/tsn-8c5f6b23d1211bb14030cc3abd4583f7/thumbs/x/bf/74/1d750cdae19c5075e0123ec455ee74bf.jpeg)
     no-repeat center center fixed;
